-
Bug
-
Resolution: Fixed
-
Blocker
-
None
-
None
-
3
-
9223372036854775807
I'm seeing a crash when loading lnet.
The crash appears to be in libcfs_init() with the following configuration
options libcfs cpu_npartitions=4 cpu_pattern="0[0] 1[1] 2[2] 3[3]"
CPU information
[root@MRtest03 Lustre]# lscpu Architecture: x86_64 CPU op-mode(s): 32-bit, 64-bit Byte Order: Little Endian CPU(s): 4 On-line CPU(s) list: 0-3 Thread(s) per core: 1 Core(s) per socket: 1 Socket(s): 4 NUMA node(s): 1 Vendor ID: GenuineIntel CPU family: 6 Model: 15 Stepping: 3 CPU MHz: 1595.926 BogoMIPS: 3191.85 Hypervisor vendor: KVM Virtualization type: full L1d cache: 32K L1i cache: 32K L2 cache: 4096K NUMA node0 CPU(s): 0-3
Crash info
<1>BUG: unable to handle kernel NULL pointer dereference at 0000000000000001
<1>IP: [<ffffffff812942b0>] strchr+0x0/0x30
<4>PGD 7aee1067 PUD 7d68c067 PMD 0
<4>Oops: 0000 [#1] SMP
<4>last sysfs file: /sys/devices/system/node/node0/cpumap
<4>CPU 2
<4>Modules linked in: libcfs(+)(U) autofs4 sunrpc bnx2fc cnic uio fcoe libfcoe libfc scsi_transport_fc scsi_tgt 8021q garp stp llc ipv6 uinput microcode virtio_balloon virtio_console snd_hda_intel snd_hda_codec snd_hwdep snd_seq snd_seq_device snd_pcm snd_timer snd soundcore snd_page_alloc 8139too 8139cp mii virtio_net i2c_piix4 i2c_core ext4 jbd2 mbcache virtio_blk virtio_pci virtio_ring virtio pata_acpi ata_generic ata_piix dm_mirror dm_region_hash dm_log dm_mod [last unloaded: speedstep_lib]
<4>
<4>Pid: 5116, comm: modprobe Not tainted 2.6.32.504.16.2.el6_lustre #1 QEMU Standard PC (i440FX + PIIX, 1996)
<4>RIP: 0010:[<ffffffff812942b0>] [<ffffffff812942b0>] strchr+0x0/0x30
<4>RSP: 0018:ffff88007ae01e80 EFLAGS: 00010206
<4>RAX: 0000000000000000 RBX: 0000000000000006 RCX: ffff88007a53e492
<4>RDX: 0000000000000000 RSI: 000000000000005b RDI: 0000000000000001
<4>RBP: ffff88007ae01ef8 R08: 0000000000000246 R09: 0000000000000000
<4>R10: 0000000000000001 R11: 0000000000000000 R12: 0000000000000000
<4>R13: ffff88007a53e480 R14: ffff88007a53e480 R15: ffff88007a53e480
<4>FS: 00007f00ba973700(0000) GS:ffff880002300000(0000) knlGS:0000000000000000
<4>CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4>CR2: 0000000000000001 CR3: 0000000037193000 CR4: 00000000000006e0
<4>DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
<4>DR3: 0000000000000000 DR6: 00000000ffff0ff0 DR7: 0000000000000400
<4>Process modprobe (pid: 5116, threadinfo ffff88007ae00000, task ffff88003742c040)
<4>Stack:
<4> ffffffffa03e6045 00000000fffffffb 0000000000000246 ffff88007ae01eb8
<4><d> ffffffff810a5485 0000000000000000 ffffffff81c0a1c0 ffff88007ae01ec8
<4><d> 00000000a03e176c ffff88007ae01ef8 0000000000000000 ffffffffa028f000
<4>Call Trace:
<4> [<ffffffffa03e6045>] ? cfs_cpu_init+0xa5/0xaf0 [libcfs]
<4> [<ffffffff810a5485>] ? atomic_notifier_chain_register+0x55/0x60
<4> [<ffffffffa028f000>] ? libcfs_init+0x0/0x2b3 [libcfs]
<4> [<ffffffffa028f033>] libcfs_init+0x33/0x2b3 [libcfs]
<4> [<ffffffff8100204c>] do_one_initcall+0x3c/0x1d0
<4> [<ffffffff810bfb1f>] sys_init_module+0xdf/0x250
<4> [<ffffffff8100b072>] system_call_fastpath+0x16/0x1b
<4>Code: 75 19 48 83 e9 01 84 c0 74 06 48 83 ea 01 75 db 31 c0 c9 c3 0f 1f 80 00 00 00 00 44 38 c0 c9 19 c0 83 c8 01 c3 66 0f 1f 44 00 00 <0f> b6 17 55 48 89 f8 48 89 e5 40 38 f2 75 15 eb 19 0f 1f 80 00
<1>RIP [<ffffffff812942b0>] strchr+0x0/0x30
<4> RSP <ffff88007ae01e80>
<4>CR2: 0000000000000001